cluster-examples/cilium-cluster/kong/gateway/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong
  namespace: kong
spec:
  gatewayClassName: kong
  listeners:
  - name: http-1
    hostname: "*.example.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: http-2
    hostname: "example.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
